# upcoming-sharp

./: COPYING  ChangeLog  README  configure.ac
doc/: Makefile.am  Mono.Upcoming.source
doc/Mono.Upcoming/: Mono.Upcoming.xml  index.xml
doc/Mono.Upcoming/Mono.Upcoming/: AttendStatus.xml  AuthenticatedConnection.xml  Category.xml  ConnectionWrapper.xml  Country.xml  Event.xml  Group.xml  Metro.xml  Response.xml  State.xml  Status.xml  Token.xml  UpcomingConnection.xml  UpcomingException.xml  UpcomingParam.xml  User.xml  Venue.xml  Watch.xml
examples/: Authenticated.cs  Makefile.am  SearchEvents.cs
src/: Makefile.am  mono-upcoming.pc.in
src/Mono.Upcoming/: AssemblyInfo.cs  AssemblyInfo.cs.in  AuthenticatedConnection.cs  Category.cs  ConnectionWrapper.cs  Country.cs  Event.cs  Group.cs  Metro.cs  Response.cs  State.cs  Token.cs  UpcomingConnection.cs  UpcomingParam.cs  UpcomingUtil.cs  User.cs  Venue.cs  Watch.cs
